static file can be served by file server

--- a/file/src/main/resources/static/EmailVerificationSuccess.html
+++ b/file/src/main/resources/static/EmailVerificationSuccess.html
@@ -279,7 +279,8 @@
 <div class="status-container">
     <div class="content-wrapper">
         <div class="logo-wrapper">
-            <img src="/file/static/logo_light.png" alt="Logo" class="logo">
+            <img src="http://kyoku.poulastaa.shop:8080/api/v1/file/static?fileName=logo_dark.png" alt="Logo"
+                 class="logo">
         </div>
 
         <div class="status-icon">✓</div>
