eamil user can sing-in/up

--- a/file/src/main/resources/static/LinkAlreadyUsed.html
+++ b/file/src/main/resources/static/LinkAlreadyUsed.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <link rel="icon" type="image/png" href="http://kyoku.poulastaa.shop:8080/api/v1/file/static?fileName=logo_dark.png">
     <title>Link Already Used</title>
     <style>
         :root {
@@ -311,11 +312,6 @@
                 animation-iteration-count: 1 !important;
                 transition-duration: 0.01ms !important;
             }
-        }
-
-        .error-emphasis {
-            color: var(--error-orange);
-            font-weight: 600;
         }
     </style>
 </head>
